# fastapi-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: CREATE DEFINER=`aidt_owner`@`%` PROCEDURE `sso2`.`  MCP_CLIENT_SETUP.md  MCP_TOOLS.md  README.md  README_CALCULATOR.md
scripts/: __init__.py  health_check.py  start_dev.py
src/: __init__.py  main.py
src/config/: __init__.py  logging.py  settings.py
src/mcps/: __init__.py
src/mcps/calculator/: __init__.py  client.py  config.py  models.py  router.py
src/mcps/confluence/: __init__.py  client.py  config.py  models.py  router.py
src/mcps/jira/: __init__.py  client.py  config.py  models.py  router.py
src/mcps/slack/: __init__.py  client.py  config.py  models.py  router.py
src/shared/: __init__.py  auth.py  exceptions.py  middleware.py  models.py  utils.py
tests/: conftest.py  test_calculator.py  test_env.sh  test_main.py  test_simple.py
tests/mcps/: __init__.py  test_confluence.py  test_jira.py  test_slack.py
